Inyección por constructor

--- a/Talentos v2/spring-concurso-talentos-01/pom.xml
+++ b/Talentos v2/spring-concurso-talentos-01/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>mx.com.gm</groupId>
-  <artifactId>spring-interprete-01</artifactId>
+  <artifactId>spring-concurso-talestos-01</artifactId>
   <version>1.0</version>
   <dependencies>
   	<dependency>
@@ -23,6 +23,11 @@
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.11</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>log4j</groupId>
+  		<artifactId>log4j</artifactId>
+  		<version>1.2.14</version>
   	</dependency>
   </dependencies>
 </project>
